@@ -9,6 +9,7 @@
 
 2010-11-26  Christian Kuhn  <lolli@schwarzbu.ch>
 
+	* Fixed bug #16321: [scheduler] Numeric zero for representation of weekday sunday is not accepted (Thanks to Marcus Krause)
 	* Fixed bug #16582: [Caching framework] Remove misleading memcached configuration example from config_default
 	* Fixed bug #16445: Performance Tuning: Replace exec_SELECTgetRows with exec_SELECTgetSingleRow whenever a single record is expected (Thanks to Jo Hasenau)
 	* Fixed bug #16317: [scheduler] Valid values generated from cron command does not contain integers only (Thanks to Marcus Krause)
